fix: #COCO-5432 fix build